# time-lab

./: .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  DOCUMENTATION_INDEX.md  Justfile  README.md  bootstrap-wsl2.sh  flake.nix  latest  plan.md
.ai/: CONTEXT.md  GUIDE.md  HANDOFF.md  RULES.md
.ai-template/: CONTEXT.md  GUIDE.md  HANDOFF.md  README.md  RULES.md  init-ai.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
2025/10/15/: README.md
2025/10/15/knowledge/: notes.md
2025/10/16/: README.md
2025/10/16/ai-team/artifacts/run_20251016_091326_d7ba496e/: run.json
2025/10/16/ai-team/specs/: test.json
2025/10/16/knowledge/: notes.md
2025/10/17/: README.md
2025/10/17/knowledge/: notes.md
docs/: IMPLEMENTATION_ROADMAP.md  SOPS.md  VISION.md
docs/0-start/: GETTING_STARTED.md
docs/2-use/: WORKFLOW.md
docs/3-extend/: EXTENSION_GUIDE.md
docs/archive/1-build-completed-2025-10-16/: BUILD_COMPLETE.md  IMPLEMENTATION_GUIDE.md
docs/context/: COMPARISON_TO_TIME_2025.md  original_repo.md
docs/reference/: ARCHITECTURE.md  DECISIONS.md  GLOSSARY.md
docs/reference/schemas/: README.md  llm_task.schema.json  mining_task.schema.json  run.schema.json  spec.schema.json
scripts/: mine_commits.sh  run_llm_task.sh  summarize_diff.sh  sync_latest.sh  today.sh
tests/integration/: test_workflow.sh
tools/py_post/: py_post.py  pyproject.toml
tools/rust_extractor/: Cargo.toml
tools/rust_extractor/src/: main.rs
